--- a/grasp/tasks/examples/subgraph_recipes/variation_1_mbpp/graph_config.yaml
+++ b/grasp/tasks/examples/subgraph_recipes/variation_1_mbpp/graph_config.yaml
@@ -2,7 +2,7 @@ graph_config:
   nodes:
     generate_question:
       node_type: subgraph
-      subgraph: grasp.tasks.examples.subgraph_recipes.subgraphs.generate_question
+      subgraph: tasks.examples.subgraph_recipes.subgraphs.generate_question
       node_config_map:
         paraphrase_question:
             output_keys: rephrased_text
@@ -29,7 +29,7 @@ graph_config:
           temperature: 0.1
 
     critique_answer:
-      pre_process: grasp.tasks.examples.subgraph_recipes.variation_1_mbpp.task_executor.critique_answer_node_pre_process
+      pre_process: tasks.examples.subgraph_recipes.variation_1_mbpp.task_executor.critique_answer_node_pre_process
       node_type: llm
       output_role: user
       prompt:
@@ -57,7 +57,7 @@ graph_config:
     - from: generate_answer
       to: critique_answer
     - from: critique_answer
-      condition: grasp.tasks.examples.subgraph_recipes.variation_1_mbpp.task_executor.should_continue
+      condition: tasks.examples.subgraph_recipes.variation_1_mbpp.task_executor.should_continue
       path_map:
         END: END
         generate_answer: generate_answer
