--- a/grasp/config/configuration.yaml
+++ b/grasp/config/configuration.yaml
@@ -1,6 +1,6 @@
 default_transformations:
-  - transform: grasp.processors.data_transform.CreateImageUrlTransform
-  - transform: grasp.processors.data_transform.CreateAudioUrlTransform
+  - transform: processors.data_transform.CreateImageUrlTransform
+  - transform: processors.data_transform.CreateAudioUrlTransform
 model_config:
   ssl_verify: true
   ssl_cert: None
