--- a/grasp/tasks/examples/subgraph_recipes/evol_instruct/graph_config.yaml
+++ b/grasp/tasks/examples/subgraph_recipes/evol_instruct/graph_config.yaml
@@ -29,6 +29,6 @@ graph_config:
 
 
 output_config:
-  generator: grasp.tasks.examples.subgraph_recipes.evol_instruct.task_executor.EvolTextGenerator
+  generator: tasks.examples.subgraph_recipes.evol_instruct.task_executor.EvolTextGenerator
 
 
