Update toml with filter_tags dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,6 @@ pathvalidate = "^3.2.1"
 ujson = "^5.10.0"
 fasttext = "^0.9.2"
 lexicalrichness = "^0.5.1"
-tensorflow = "^2.19.0"
 torch = "^2.7.0"
 pytest = "^8.4.0"
 langchain-openai = "^0.3.24"
@@ -39,6 +38,9 @@ streamlit-autorefresh= "^1.0.1"
 streamlit-flow-component= "^1.6.1"
 soundfile = "^0.13.1"
 ollama = "^0.5.1"
+mlxtend = "^0.23.4"
+pandarallel = "^1.6.5"
+sentence-transformers = "^5.1.0"
 
 [tool.poetry.group.dev.dependencies]
 setuptools = "^75.1.0"
