--- a/tasks/examples/agent_tool_simulation/graph_config.yaml
+++ b/tasks/examples/agent_tool_simulation/graph_config.yaml
@@ -1,19 +1,19 @@
 data_config:
   source:
     type: "disk"
-    file_path: "grasp/tasks/examples/agent_tool_simulation/user_queries.json"
+    file_path: "tasks/examples/agent_tool_simulation/user_queries.json"
     file_format: "json"
 
 graph_config:
   nodes:
     math_agent:
       node_type: agent
-      post_process: grasp.tasks.examples.agent_tool_simulation.task_executor.MathAgentPostProcessor
+      post_process: tasks.examples.agent_tool_simulation.task_executor.MathAgentPostProcessor
       output_keys: math_result
       tools:
-          - grasp.tasks.examples.agent_tool_simulation.tools.add
-          - grasp.tasks.examples.agent_tool_simulation.tools_from_class.ToolClass
-          - grasp.tasks.examples.agent_tool_simulation.tools_from_module
+          - tasks.examples.agent_tool_simulation.tools.add
+          - tasks.examples.agent_tool_simulation.tools_from_class.ToolClass
+          - tasks.examples.agent_tool_simulation.tools_from_module
       prompt:
         - system: |
             You are a math agent that can perform basic arithmetic operations.
