--- a/tasks/examples/structured_output/graph_config.yaml
+++ b/tasks/examples/structured_output/graph_config.yaml
@@ -26,7 +26,7 @@ graph_config:
       output_keys:
         - category
         - sub_category
-      post_process: grasp.tasks.examples.structured_output.task_executor.GenerateTaxonomyPostProcessor
+      post_process: tasks.examples.structured_output.task_executor.GenerateTaxonomyPostProcessor
       model:
         name: gpt-4o
         parameters:
