--- a/tasks/examples/subgraph_recipes/subgraphs/generate_answer_and_critique/graph_config.yaml
+++ b/tasks/examples/subgraph_recipes/subgraphs/generate_answer_and_critique/graph_config.yaml
@@ -16,7 +16,7 @@ graph_config:
           temperature: 0.1
 
     critique_answer:
-      pre_process: grasp.tasks.mbpp.code_generation.task_executor.critique_answer_node_pre_process
+      pre_process: tasks.mbpp.code_generation.task_executor.critique_answer_node_pre_process
       node_type: llm
       output_role: user
       prompt:
@@ -42,7 +42,7 @@ graph_config:
     - from: generate_answer
       to: critique_answer
     - from: critique_answer
-      condition: grasp.tasks.mbpp.code_generation.task_executor.should_continue
+      condition: tasks.mbpp.code_generation.task_executor.should_continue
       path_map:
         END: END
         generate_answer: generate_answer
