Rewrite subgraph examples

--- a/grasp/recipes/evol_instruct/graph_config.yaml
+++ b/grasp/recipes/evol_instruct/graph_config.yaml
@@ -11,7 +11,7 @@ graph_config:
         - user: |
             {evol_instruct_final_prompt}
       model:      
-        name: gpt-4o-mini
+        name: gpt-4o
         parameters:          
           temperature: 1.0
 
