Example output added for readme of example tasks

--- a/tasks/examples/glaive_code_assistant/graph_config.yaml
+++ b/tasks/examples/glaive_code_assistant/graph_config.yaml
@@ -67,7 +67,7 @@ output_config:
         - category: "Coding"
           subcategory: ""
     annotation_type:
-      value: [ "mistral-large" ]
+      value: [ "gpt4o" ]
     language:
       value: "en"
     tags:
