Added Makefile, Fix unit test errors and warnings and changes to support Python 3.9+

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
       - Schema Validator: concepts/schema_validator/README.md
       - Structured Output: concepts/structured_output/README.md
   - GraSP Library: grasp_library.md
+  - Contribute: contributing.md
 plugins:
   - search
   - include-markdown
