--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,8 @@ dependencies = [
   "torch",
   "mlxtend",
   "pandarallel",
-  "sentence-transformers"
+  "sentence-transformers",
+  "soundfile"
 ]
 
 [project.optional-dependencies]
@@ -63,9 +64,9 @@ ui = [
   "streamlit-agraph",
   "streamlit-autorefresh",
   "streamlit-flow-component",
+  "watchdog"
 ]
-audio = ["soundfile"]
-dev = ["pytest", "build", "twine"]
+dev = ["pytest", "build", "twine", "black", "isort", "flake8", "pylint", "mypy", "mkdocs", "mkdocs-material", "mkdocs-include-markdown-plugin"]
 
 [project.scripts]
 grasp = "grasp.cli:main"
@@ -121,12 +122,89 @@ torch = "*"
 mlxtend = "*"
 pandarallel = "*"
 sentence-transformers = "*"
+soundfile = "*"
 
 [tool.poetry.extras]
 ui = ["streamlit", "streamlit-agraph", "streamlit-autorefresh", "streamlit-flow-component", "watchdog"]
-audio = ["soundfile"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
 build = "*"
 twine = "*"
+black = "*"
+isort = "*"
+flake8 = "*"
+pylint = "*"
+mypy = "*"
+mkdocs = "*"
+mkdocs-material = "*"
+mkdocs-include-markdown-plugin = "*"
+
+
+# --- Tool configurations ---
+[tool.black]
+line-length = 100
+target-version = ["py39", "py310", "py311"]
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 100
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+skip_gitignore = true
+
+[tool.pylint.messages_control]
+disable = [
+    "C0111", # missing-docstring
+    "C0103", # invalid-name
+    "C0330", # bad-continuation
+    "C0326", # bad-whitespace
+    "W0511", # fixme
+    "W1202", # logging-format-interpolation
+    "R0903", # too-few-public-methods
+    "R0913", # too-many-arguments
+    "R0914", # too-many-locals
+    "R0915", # too-many-statements
+]
+max-line-length = 100
+
+[tool.pylint.format]
+max-line-length = 100
+
+[tool.mypy]
+python_version = "3.9"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+check_untyped_defs = true
+disallow_untyped_decorators = false
+no_implicit_optional = true
+strict_optional = true
+
+[[tool.mypy.overrides]]
+module = ["tests.*"]
+disallow_untyped_defs = false
+check_untyped_defs = false
+
+[tool.flake8]
+max-line-length = 100
+exclude = [".git", "__pycache__", "build", "dist", ".eggs", "venv", ".venv"]
+extend-ignore = ["E203", "W503"]
