--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,7 +56,7 @@ nav:
       - Glaive Code Assistant: tutorials/glaive_code_assistant_tutorial.md
       - Image to QnA: tutorials/image_to_qna_tutorial.md
       - Structured Output: tutorials/structured_output_tutorial.md
-      - Structured Output with Function Calling: tutorials/structured_output_function_calling_tutorial.md
+      - Structured Output with Multi-LLM: tutorials/structured_output_with_multi_llm_tutorial.md
   - GraSP Library: grasp_library.md
 plugins:
   - search
