--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,7 @@ nav:
       - Agent Simulation with Tools: tutorials/agent_tool_simulation_tutorial.md
       - Audio Classification: tutorials/audio_to_text_tutorial.md
       - Custom Subgraphs: tutorials/custom_subgraphs_tutorial.md
-      - Evol Instruct: tutorials/evol_instruct_tutorial.md
+      - Evolution of Prompts with Evol-Instruct: tutorials/evol_instruct_tutorial.md
       - Self Improving Code Assistant: tutorials/glaive_code_assistant_tutorial.md
       - Image to QnA: tutorials/image_to_qna_tutorial.md
       - Structured Output: tutorials/structured_output_tutorial.md
