Add documentation for tutorials (#11)
* Add documentation for examples

* Rewrite subgraph examples

* Evol instruct example documentation

* Minor updates to evol_instruct readme

* PR template fixes

* Add readme for structured output example

* Adding key features TLDR in each documentation and remove redundant information

* Example output added for readme of example tasks

* Change in logic to process subgraph path

* Custom subgraph example

* image_to_qna and test fixes

* Update custom subgraph example and add README

* Remove redundant task_executor for evol_instruct

* image_to_qna pipeline fixes

* tutorial documentation

* Delete old example readme

* Updates to mkdocs.yml to include tutorial

* keeping the old readme for structured output with multillm

* Update README.md

* minor fixes

* Minor fixes to documentation

* Minor readme refactor

* Minor fixes

* Minor fixes

* removing running grasp via cli

---------

Co-authored-by: Vipul Mittal <118464422+vipul-mittal@users.noreply.github.com>
Co-authored-by: Surajit Dasgupta <surajit.dasgupta@servicenow.com>

--- a/tasks/examples/custom_subgraphs/generate_question_subgraph/graph_config.yaml
+++ b/tasks/examples/custom_subgraphs/generate_question_subgraph/graph_config.yaml
@@ -25,7 +25,7 @@ graph_config:
         - user: |
             QUESTION: {p}. Write the program in python.
       model:
-        name: gpt4o
+        name: gpt4
         parameters:
           temperature: 0.1
 
