--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,7 +20,7 @@ jobs:
         id: setup-python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.9'
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cached-poetry-deps.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
+        run: make setup-dev
 
       - name: Run tests
         run: poetry run pytest tests/
