--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,49 +24,8 @@ maintainers = [
 license = {text = "Apache-2.0"}
 classifiers = [
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.9",
 ]
-
-dependencies = [
-  "aiohttp",
-  "datasets",
-  "httpx",
-  "httpx-sse",
-  "huggingface-hub",
-  "langchain-community",
-  "langchain-core",
-  "langchain-mistralai",
-  "langgraph",
-  "mistralai",
-  "openai",
-  "PyYAML",
-  "transformers",
-  "grandalf",
-  "sentencepiece",
-  "protobuf",
-  "Jinja2",
-  "pathvalidate",
-  "ujson",
-  "fasttext",
-  "lexicalrichness",
-  "langchain-openai",
-  "ollama",
-  "torch",
-  "mlxtend",
-  "pandarallel",
-  "sentence-transformers",
-  "soundfile"
-]
-
-[project.optional-dependencies]
-ui = [
-  "streamlit",
-  "streamlit-agraph",
-  "streamlit-autorefresh",
-  "streamlit-flow-component",
-  "watchdog"
-]
-dev = ["pytest", "pytest-asyncio", "build", "twine", "black", "isort", "flake8", "pylint", "mypy", "mkdocs", "mkdocs-material", "mkdocs-include-markdown-plugin"]
 
 [project.urls]
 Homepage = "https://github.com/ServiceNow/GraSP"
@@ -120,8 +79,12 @@ pandarallel = "*"
 sentence-transformers = "*"
 soundfile = "*"
 
-[tool.poetry.extras]
-ui = ["streamlit", "streamlit-agraph", "streamlit-autorefresh", "streamlit-flow-component", "watchdog"]
+[tool.poetry.group.ui.dependencies]
+streamlit = "*"
+streamlit-agraph = "*"
+streamlit-autorefresh = "*"
+streamlit-flow-component = "*"
+watchdog = "*"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
